flux/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook-receiver
  namespace: flux-system
spec:
  hostnames:
    - github-webhook.lucadev.de
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: webhook-receiver
          namespace: flux-system
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
